--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Notícias</title>
-		</head>
-	<body>
+<html lang="pt-br">
 
-		<h1>Notícias</h1>
-
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<title>Notícias</title>
+</head>
+<body>
+	<h1>Notícias</h1>
+	<table border="3">
+		<thead>
+			<th>Id</th>
+			<th>Título</th>
+			<th>Notícias</th>
+		</thead>
+		<tbody>
+			<% for(let i = 0; i < noticias.length; i++) {%>
+			<tr>
+				<td>
+					<%= noticias[i].id%>
+				</td>
+				<td>
+					<%= noticias[i].titulo%>
+				</td>
+				<td>
+					<%= noticias[i].noticia%>
+				</td>
+			</tr>
+			<%}%>
+		</tbody>
+	</table>
+</body>
 </html>
