--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -15,17 +15,11 @@
 		</thead>
 		<tbody>
 			<% for(let i = 0; i < noticias.length; i++) {%>
-			<tr>
-				<td>
-					<%= noticias[i].id%>
-				</td>
-				<td>
-					<%= noticias[i].titulo%>
-				</td>
-				<td>
-					<%= noticias[i].noticia%>
-				</td>
-			</tr>
+				<tr>
+					<td><%= noticias[i].id%></td>
+					<td><%= noticias[i].titulo%></td>
+					<td><%= noticias[i].noticia%></td>
+				</tr>
 			<%}%>
 		</tbody>
 	</table>
