--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Portal de notícias</title>
-		</head>
-	<body>
+<html lang="pt-br">
 
-		<h1>Notícia</h1>
-
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<title>Notícias</title>
+</head>
+<body>
+	<h1>Notícias</h1>
+	<table border="3">
+		<thead>
+			<th>Id</th>
+			<th>Título</th>
+			<th>Notícias</th>
+		</thead>
+		<tbody>
+				<tr>
+					<td><%= noticia[0].id%></td>
+					<td><%= noticia[0].titulo%></td>
+					<td><%= noticia[0].noticia%></td>
+				</tr>
+		</tbody>
+	</table>
+</body>
 </html>
