[S8][38] - Recebendo dados de formulário via POST com body-parser.

--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -11,8 +11,7 @@
 			<label>Título</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia"/><br/>
 			<label>Notícia</label>
-			<textarea id="noticia" name="noticia" rows="5" cols="30">
-			<textarea/><br/>
+			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea><br/>
 			<input type="submit" value="Enviar"/>
 	</body>
 </html>
