--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -10,6 +10,12 @@
 		<form action="/noticias/salvar" method="POST">
 			<label>Título</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia"/><br/>
+			<label>Resumo</label>
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da Notícia"/><br/>
+			<label>Nome Autor</label>
+			<input type="text" id="autor" name="autor" placeholder="Autor da Notícia"/><br/>
+			<label>Data</label>
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da Notícia"/><br/>
 			<label>Notícia</label>
 			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea><br/>
 			<input type="submit" value="Enviar"/>
